# pamm

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Modefile  README.md
cli/: Cargo.toml  README.md
cli/.rpm/: pamm_cli.spec
cli/src/: args.rs  log_wrapper.rs  main.rs  progress_reporting.rs
cli/src/commands/: add_pack.rs  build.rs  deploy.rs  init_pack.rs  init_remote.rs  init_repo.rs  launch.rs  macros.rs  mod.rs  sync_pack.rs  sync_this_only_pack.rs  update_pack.rs
cli/src/commands/input/: from_cli_input.rs  mod.rs  pack_config.rs  repo_config.rs  server_info.rs
cli/src/commands/optionals/: mod.rs
cli/src/subcommands/: externals.rs  mod.rs  optionals.rs
cli/src/subcommands/optionals/: mod.rs  toggle_optionals.rs
cli/src/utils/: diff_to_string.rs  mod.rs
lib/: Cargo.toml
lib/src/: bin_serialization.rs  consts.rs  identifiable.rs  json_serialization.rs  known_name.rs  kv_cache.rs  lib.rs  name_consts.rs  named.rs
lib/src/actions/: mod.rs
lib/src/actions/launch/: steam.rs
lib/src/actions/sync/: interactor.rs  mod.rs  sync_pack.rs
lib/src/commands/: mod.rs  steam_launch.rs
lib/src/dl/: apply_diff.rs  downloader.rs  mod.rs  multipart.rs  patcher.rs
lib/src/fs/: apply_pack_diff.rs  config_fs.rs  delete_pack.rs  determine_pack_diff.rs  diff_fs.rs  file_cache.rs  fs_readable.rs  fs_writable.rs  gen_pack_from_fs.rs  init_pack.rs  manifest_fs.rs  mod.rs  pack_diff.rs  pack_init.rs  part_reader.rs  pbo_reader.rs
lib/src/fs/cache/: file_cache_entry.rs  kv_cache.rs
lib/src/fs/init/: init_pack.rs  init_repo.rs  mod.rs
lib/src/handle/: addons.rs  client_repo_handle.rs  downloading.rs  mock_handle.rs  mod.rs  params.rs  reading.rs  repo_handle.rs  server_repo_handle.rs  writing.rs
lib/src/handle/actions/: mod.rs
lib/src/handle/client/: addons.rs  client_repo_handle.rs  downloading.rs  mock_handle.rs  mod.rs  params.rs
lib/src/handle/optionals/: get_optionals_pahts.rs  get_optionals_paths.rs  load_optionals.rs  mod.rs  optional_addon.rs  resolve_optionals.rs  resolve_optionals_paths.rs  save_optionals.rs
lib/src/handle/reading/: get_addon_paths.rs  get_canonical_addon_paths.rs  get_linux_addon_paths.rs  get_pack.rs  get_pack_index.rs  get_repo_info.rs  mod.rs
lib/src/handle/writing/: add_pack.rs  apply_diff.rs  delete_pack.rs  mod.rs  save_pack_settings.rs  update_pack.rs  update_repo_config.rs
lib/src/index/: diff_index.rs  get_change_count.rs  get_size.rs  index_node.rs  mod.rs  node_diff.rs
lib/src/io/: known_file.rs  mod.rs  name_consts.rs  named.rs  named_file.rs  rel_path.rs
lib/src/io/files/: mod.rs  name_consts.rs
lib/src/io/fs/: apply_diff.rs  delete_pack.rs  fs_deletable.rs  fs_readable.rs  fs_writable.rs  index.rs  manifest_fs.rs  migrations.rs  mod.rs  part_reader.rs
lib/src/io/net/: apply_diff.rs  byte_range_response.rs  dowload_file.rs  download_file.rs  downloadable.rs  index_downloader.rs  mod.rs  patcher.rs  remote_patcher.rs  remote_version.rs
lib/src/io/progress_reporting/: copy_with_report.rs  download_reporter.rs  mod.rs  progress_reporter.rs  progress_reporter_provider.rs
lib/src/io/serialization/: macros.rs  mod.rs  writable.rs
lib/src/manifest/: get_size.rs  mod.rs  pack_manifest.rs
lib/src/manifest/diff/: determine_pack_diff.rs  entry_diff.rs  mod.rs  pack_diff.rs
lib/src/manifest/entries/: manifest_entry.rs  mod.rs
lib/src/migration/: migrator.rs  mod.rs  version_tag.rs
lib/src/migration/migrations/: mod.rs  v0tov1.rs
lib/src/models/: identifiable.rs  keyed.rs  mod.rs  self_keyed.rs  server.rs  server_config.rs
lib/src/models/index/: checksum_index.rs  diff_index.rs  get_change_count.rs  get_dl_size.rs  get_size.rs  get_size_change.rs  index_node.rs  mod.rs  node_diff.rs
lib/src/models/pack/: mod.rs  pack_config.rs  pack_customization.rs  pack_diff.rs  pack_index.rs  pack_user_settings.rs
lib/src/models/repo/: mod.rs  (+5 more)
lib/src/net/: apply_diff.rs  downloadable.rs  patcher.rs
lib/src/pack/: addon.rs  addon_change.rs  local_pack_config.rs  manifest.rs  mod.rs  pack_config.rs  pack_diff.rs  pack_index.rs  pack_manifest.rs  pack_user_settings.rs  part_diff.rs  server_info.rs
lib/src/repo/: local_repo_config.rs  mod.rs  remote_config.rs  repo_config.rs  repo_user_settings.rs
lib/src/serialization/: bin_serialization.rs  config_serialization.rs  json_serialization.rs  macros.rs  manifest_serialization.rs  mod.rs  readable.rs  serializable.rs
lib/src/util/: iterator_diff.rs  mod.rs  test_utils.rs
ui/rust/: Cargo.toml
ui/rust/src/: frb_generated.rs
(+229 files in other folders)
