[package]
name = "pamm_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
pamm_lib = { path = "../lib" }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
dialoguer = "0.12.0"
serde_json = "1.0.145"
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"
bincode = { version = "2.0.1" , features = ["serde"]}