[package]
name = "pamm_cli"
version = "0.0.0-local"
edition = "2024"
authors = ["Perondas <thomas@perondas.dev>"]
description = "A command-line interface for pamm, a arma 3 mod manager."
license = "GPL-3"

[dependencies]
pamm_lib = { path = "../lib" }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
dialoguer = "0.12.0"
url = "2.5.8"
indicatif = "0.18.4"
log = "0.4.29"
env_logger = "0.11.10"

[package.metadata.deb]
maintainer = "Perondas <thomas@perondas.dev>"
copyright = "2026, Perondas"
license-file = ["../LICENSE"]
assets = [
    ["target/release/pamm_cli", "usr/bin/", "755"],
]

[package.metadata.rpm]
package = "pamm_cli"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
pamm_cli = { path = "/usr/bin/pamm_cli" }
