[package]
name = "pamm_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bi_fs_rs = { path = "../bi_fs_rs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
sha1 = "0.10.6"
regex = "1.11.2"
url = "2.5.7"
bincode = { version = "2.0.1" , features = ["serde"]}
sled = "0.34.7"
ureq = { version = "3.1.4" }
