[package]
name = "pamm_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bi_fs_rs = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
regex = "1.12.3"
url = { version = "2.5.8", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
sled = "0.34.7"
ureq = { version = "3.3.0" }
rayon = "1.12.0"
blake3 = "1.8.5"
urlencoding = "2.1.3"
open = "5.3.5"
log = "0.4.29"

[target.'cfg(target_os = "linux")'.dependencies]
steam-vdf-parser = "0.1.1"

[dev-dependencies]
mockall = "0.14.0"
