[package]
name = "rust_lib_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
pamm_lib = { path = "../../lib" }
url = "2.5.7"
anyhow = "1.0.100"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
