[package]
name = "rust_lib_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
pamm_lib = { path = "../../lib" }
url = "2.5.8"
anyhow = "1.0.102"
log = { version = "0.4.29" , features = ["std"]}


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
